Add lorem ipsum intro

--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
       </nav>
     </header>
     <main class="main">
-      <section class="intro">Intro</section>
+      <section class="intro">
+        <h2>Section title</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam iste ea
+          eaque eos repellendus quaerat fugit doloribus quas, beatae
+          voluptatibus dolores consequatur, nostrum neque doloremque ab aperiam
+          cumque numquam voluptates.
+        </p>
+      </section>
     </main>
     <footer class="footer">Footer</footer>
 
